Revert "Added new AS Icon to images folder. Cleaned up white space and css issues for Peer view diagram"
This reverts commit 114e1e95e1041189404be7830fe1ded5adda8958.

--- a/app/views/components/card/_card.scss
+++ b/app/views/components/card/_card.scss
@@ -16,8 +16,7 @@
   }
   .row{
     width: 100%;
-    // margin: 0 0 30px 0;
-    margin: 0;
+    margin: 0 0 30px 0;
   }
   .content {
     display: inline;
